--- a/index.html
+++ b/index.html
@@ -308,16 +308,16 @@
       transition: opacity .12s ease;
     }
     .preview img{
-      width:min(360px, 62%);
-      max-width: 420px;
-      height:auto;
-      border-radius: 22px;
-      border: 1px solid rgba(255,255,255,.18);
-      box-shadow: 0 18px 60px rgba(0,0,0,.45);
-      background: rgba(0,0,0,.25);
-      transform: translateY(8px);
-      transition: transform .14s ease;
-    }
+  width: min(1100px, 92%);
+  max-width: none;
+  height: auto;
+  border-radius: 22px;
+  border: 1px solid rgba(255,255,255,.18);
+  box-shadow: 0 18px 60px rgba(0,0,0,.45);
+  background: rgba(0,0,0,.25);
+  transform: translateY(8px);
+  transition: transform .14s ease;
+}
     .preview.show{ opacity:1; }
     .preview.show img{ transform: translateY(0); }
 
