--- a/numbers.html
+++ b/numbers.html
@@ -504,7 +504,7 @@
             </div>
 
             <p class="mini">
-              Teacher note: Put <b>1.png … 5.png</b> next to <b>numbers.html</b> in your GitHub repo.
+              Teacher note: Put <b>1.jpg … 5.jpg</b> next to <b>numbers.html</b> in your GitHub repo.
               Images are shown randomly as a reward.
             </p>
           </div>
@@ -553,7 +553,7 @@
     // ================================
 
     // Put these files in the same folder as numbers.html:
-    const REWARD_IMAGES = ["1.png","2.png","3.png","4.png","5.png"]; // required by the user
+    const REWARD_IMAGES = ["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg"]; // required by the user
 
     const WORD_BANK = [
       "beard",
